# movie-sphere-ui/src/openapi/openapi.json
@@ -1,6 +1,9 @@
 {
   "openapi": "3.0.1",
-  "info": { "title": "OpenAPI definition", "version": "v0" },
+  "info": {
+    "title": "OpenAPI definition",
+    "version": "v0"
+  },
   "servers": [
     {
       "url": "http://localhost:8080/api/v1",
@@ -10,12 +13,16 @@
   "paths": {
     "/auth/register": {
       "post": {
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "operationId": "register",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": { "$ref": "#/components/schemas/RegistrationRequest" }
+              "schema": {
+                "$ref": "#/components/schemas/RegistrationRequest"
+              }
             }
           },
           "required": true
@@ -24,7 +31,11 @@
           "200": {
             "description": "OK",
             "content": {
-              "application/json": { "schema": { "type": "object" } }
+              "application/json": {
+                "schema": {
+                  "type": "object"
+                }
+              }
             }
           }
         }
@@ -32,12 +43,16 @@
     },
     "/auth/authenticate": {
       "post": {
-        "tags": ["Authentication"],
+        "tags": [
+          "Authentication"
+        ],
         "operationId": "authenticate",
         "requestBody": {
           "content": {
             "application/json": {
-              "schema": { "$ref": "#/components/schemas/AuthenticationRequest" }
+              "schema": {
+                "$ref": "#/components/schemas/AuthenticationRequest"
+              }
             }
           },
           "required": true
@@ -58,14 +73,18 @@
     },
     "/admin/movies/{imdbId}": {
       "get": {
-        "tags": ["Movie/Admin"],
+        "tags": [
+          "Movie/Admin"
+        ],
         "operationId": "getMovie",
         "parameters": [
           {
             "name": "imdbId",
             "in": "path",
             "required": true,
-            "schema": { "type": "string" }
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -73,21 +92,27 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/Movie" }
+                "schema": {
+                  "$ref": "#/components/schemas/Movie"
+                }
               }
             }
           }
         }
       },
       "post": {
-        "tags": ["Movie/Admin"],
+        "tags": [
+          "Movie/Admin"
+        ],
         "operationId": "addMovie",
         "parameters": [
           {
             "name": "imdbId",
             "in": "path",
             "required": true,
-            "schema": { "type": "string" }
+            "schema": {
+              "type": "string"
+            }
           }
         ],
         "responses": {
@@ -95,7 +120,9 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/Movie" }
+                "schema": {
+                  "$ref": "#/components/schemas/Movie"
+                }
               }
             }
           }
@@ -104,20 +131,30 @@
     },
     "/user/movies": {
       "get": {
-        "tags": ["Movie/User"],
+        "tags": [
+          "Movie/User"
+        ],
         "operationId": "getAllMovies",
         "parameters": [
           {
             "name": "page",
             "in": "query",
             "required": false,
-            "schema": { "type": "integer", "format": "int32", "default": 0 }
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
           },
           {
             "name": "size",
             "in": "query",
             "required": false,
-            "schema": { "type": "integer", "format": "int32", "default": 5 }
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 5
+            }
           }
         ],
         "responses": {
@@ -125,7 +162,9 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/PageResponseMovie" }
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseMovie"
+                }
               }
             }
           }
@@ -134,14 +173,19 @@
     },
     "/user/movies/{id}": {
       "get": {
-        "tags": ["Movie/User"],
+        "tags": [
+          "Movie/User"
+        ],
         "operationId": "getMovie_1",
         "parameters": [
           {
             "name": "id",
             "in": "path",
             "required": true,
-            "schema": { "type": "integer", "format": "int64" }
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
         ],
         "responses": {
@@ -149,7 +193,59 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/Movie" }
+                "schema": {
+                  "$ref": "#/components/schemas/Movie"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/user/movies/search": {
+      "get": {
+        "tags": [
+          "Movie/User"
+        ],
+        "operationId": "searchMovies",
+        "parameters": [
+          {
+            "name": "query",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 5
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseMovie"
+                }
               }
             }
           }
@@ -158,26 +254,38 @@
     },
     "/admin/movies": {
       "get": {
-        "tags": ["Movie/Admin"],
-        "operationId": "searchMovies",
+        "tags": [
+          "Movie/Admin"
+        ],
+        "operationId": "searchMovies_1",
         "parameters": [
           {
             "name": "query",
             "in": "query",
             "required": true,
-            "schema": { "type": "string" }
+            "schema": {
+              "type": "string"
+            }
           },
           {
             "name": "page",
             "in": "query",
             "required": false,
-            "schema": { "type": "integer", "format": "int32", "default": 0 }
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
           },
           {
             "name": "size",
             "in": "query",
             "required": false,
-            "schema": { "type": "integer", "format": "int32", "default": 10 }
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
           }
         ],
         "responses": {
@@ -185,38 +293,85 @@
             "description": "OK",
             "content": {
               "application/json": {
-                "schema": { "$ref": "#/components/schemas/PageResponseMovie" }
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseMovie"
+                }
               }
             }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Movie/Admin"
+        ],
+        "operationId": "deleteMultipleMovies",
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "array",
+                "items": {
+                  "type": "integer",
+                  "format": "int64"
+                }
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "200": {
+            "description": "OK"
           }
         }
       }
     },
     "/admin/movies/{movieId}": {
       "delete": {
-        "tags": ["Movie/Admin"],
+        "tags": [
+          "Movie/Admin"
+        ],
         "operationId": "deleteMovie",
         "parameters": [
           {
             "name": "movieId",
             "in": "path",
             "required": true,
-            "schema": { "type": "integer", "format": "int64" }
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
           }
         ],
-        "responses": { "200": { "description": "OK" } }
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
       }
     }
   },
   "components": {
     "schemas": {
       "RegistrationRequest": {
-        "required": ["email", "firstName", "lastName", "password"],
+        "required": [
+          "email",
+          "firstName",
+          "lastName",
+          "password"
+        ],
         "type": "object",
         "properties": {
-          "firstName": { "type": "string" },
-          "lastName": { "type": "string" },
-          "email": { "type": "string" },
+          "firstName": {
+            "type": "string"
+          },
+          "lastName": {
+            "type": "string"
+          },
+          "email": {
+            "type": "string"
+          },
           "password": {
             "maxLength": 2147483647,
             "minLength": 8,
@@ -225,10 +380,15 @@
         }
       },
       "AuthenticationRequest": {
-        "required": ["email", "password"],
+        "required": [
+          "email",
+          "password"
+        ],
         "type": "object",
         "properties": {
-          "email": { "type": "string" },
+          "email": {
+            "type": "string"
+          },
           "password": {
             "maxLength": 2147483647,
             "minLength": 8,
@@ -238,48 +398,112 @@
       },
       "AuthenticationResponse": {
         "type": "object",
-        "properties": { "token": { "type": "string" } }
+        "properties": {
+          "token": {
+            "type": "string"
+          }
+        }
       },
       "Movie": {
         "type": "object",
         "properties": {
-          "id": { "type": "integer", "format": "int64" },
-          "Title": { "type": "string" },
-          "Year": { "type": "string" },
-          "Rated": { "type": "string" },
-          "Released": { "type": "string" },
-          "Runtime": { "type": "string" },
-          "Genre": { "type": "string" },
-          "Director": { "type": "string" },
-          "Writer": { "type": "string" },
-          "Actors": { "type": "string" },
-          "Plot": { "type": "string" },
-          "Language": { "type": "string" },
-          "Country": { "type": "string" },
-          "Awards": { "type": "string" },
-          "Poster": { "type": "string" },
-          "Metascore": { "type": "string" },
-          "imdbRating": { "type": "string" },
-          "imdbVotes": { "type": "string" },
-          "imdbID": { "type": "string" },
-          "Type": { "type": "string" },
-          "DVD": { "type": "string" },
-          "BoxOffice": { "type": "string" },
-          "Production": { "type": "string" },
-          "Website": { "type": "string" },
-          "Response": { "type": "string" },
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "Title": {
+            "type": "string"
+          },
+          "Year": {
+            "type": "string"
+          },
+          "Rated": {
+            "type": "string"
+          },
+          "Released": {
+            "type": "string"
+          },
+          "Runtime": {
+            "type": "string"
+          },
+          "Genre": {
+            "type": "string"
+          },
+          "Director": {
+            "type": "string"
+          },
+          "Writer": {
+            "type": "string"
+          },
+          "Actors": {
+            "type": "string"
+          },
+          "Plot": {
+            "type": "string"
+          },
+          "Language": {
+            "type": "string"
+          },
+          "Country": {
+            "type": "string"
+          },
+          "Awards": {
+            "type": "string"
+          },
+          "Poster": {
+            "type": "string"
+          },
+          "Metascore": {
+            "type": "string"
+          },
+          "imdbRating": {
+            "type": "string"
+          },
+          "imdbVotes": {
+            "type": "string"
+          },
+          "imdbID": {
+            "type": "string"
+          },
+          "Type": {
+            "type": "string"
+          },
+          "DVD": {
+            "type": "string"
+          },
+          "BoxOffice": {
+            "type": "string"
+          },
+          "Production": {
+            "type": "string"
+          },
+          "Website": {
+            "type": "string"
+          },
+          "Response": {
+            "type": "string"
+          },
           "Ratings": {
             "type": "array",
-            "items": { "$ref": "#/components/schemas/Rating" }
+            "items": {
+              "$ref": "#/components/schemas/Rating"
+            }
           }
         }
       },
       "Rating": {
         "type": "object",
         "properties": {
-          "id": { "type": "integer", "format": "int64" },
-          "Source": { "type": "string" },
-          "Value": { "type": "string" }
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "Source": {
+            "type": "string"
+          },
+          "Value": {
+            "type": "string"
+          }
         }
       },
       "PageResponseMovie": {
@@ -287,14 +511,32 @@
         "properties": {
           "content": {
             "type": "array",
-            "items": { "$ref": "#/components/schemas/Movie" }
+            "items": {
+              "$ref": "#/components/schemas/Movie"
+            }
           },
-          "page": { "type": "integer", "format": "int32" },
-          "size": { "type": "integer", "format": "int32" },
-          "totalElements": { "type": "integer", "format": "int64" },
-          "totalPages": { "type": "integer", "format": "int32" },
-          "first": { "type": "boolean" },
-          "last": { "type": "boolean" }
+          "page": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "size": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "totalElements": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "totalPages": {
+            "type": "integer",
+            "format": "int32"
+          },
+          "first": {
+            "type": "boolean"
+          },
+          "last": {
+            "type": "boolean"
+          }
         }
       }
     }
